--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,10 @@
 Package: regexcite
-Title: What the Package Does (One Line, Title Case)
+Title: To Make Regular Expressions Faster
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Emma", "Beltran", , "esrb@agro.au.dk", role = c("aut", "cre"))
+Description: Teaches me how to make packages. And creates some convenient functions.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
